--- a/CbWebApp/Views/Shared/Components/Contrato/Default.cshtml
+++ b/CbWebApp/Views/Shared/Components/Contrato/Default.cshtml
@@ -15,9 +15,8 @@
         <tbody>
             @if (Model.Contratos != null)
             {
-                @foreach (var item in Model.Contratos)
+                @foreach (var item in Model.Contratos.ToEnumerable())
                 {
-
                     <tr>
                         <th scope="row">@item.NuContrato</th>
                         <td>@item.VlContrato</td>
