--- a/CbWebApp/Views/Home/_Contratos.cshtml
+++ b/CbWebApp/Views/Home/_Contratos.cshtml
@@ -15,7 +15,7 @@
         <tbody>
             @if (Model.Contratos != null)
             {
-                @foreach (var item in Model.Contratos)
+                @foreach (var item in Model.Contratos.ToEnumerable())
                 {
 
                     <tr>
